Corrected spelling, removed hover from contacts on mobile. Returned header, but cropped version. Changed animation for Hero

--- a/src/components/FooterItem/footer-item.css
+++ b/src/components/FooterItem/footer-item.css
@@ -67,6 +67,11 @@
   display: flex;
   align-items: center;
   gap: 12px;
+  opacity: 0.6;
+}
+
+.author--text {
+  font-size: 1rem;
 }
 
 .author--acent {
@@ -144,6 +149,6 @@
   }
 
   .author--text {
-    font-size: 1rem;
+    font-size: 0.75rem;
   }
 }
